apps/inference/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference
  namespace: shikanime
spec:
  gatewayClassName: inference
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  infrastructure:
    parametersRef:
      name: inference
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
